# modelo-academico

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
dados/: README.md
dados/brutos/: README.md
dados/processados/: README.md
docs/: README.md  anotacao_experimento.md  brainstorm.md  checklist_defesa.md  diario_pesquisa.md  fichamento.md  glossario_termos.md  guia_escrita_cientifica.md  planejamento_sprint.md  reuniao_orientacao.md
notebooks/: 01_coleta_dados.ipynb  02_analise_exploratoria.ipynb  03_preprocessamento.ipynb  04_treinamento_modelo.ipynb  05_avaliacao_modelo.ipynb
scripts/: 01_coleta_dados.py  02_analise_exploratoria.py  03_preprocessamento.py  04_treinamento_modelo.py  05_avaliacao_modelo.py  06_exportar_figuras_eps.py  README.md
tex/artigo/: main.tex
tex/dissertacao/: main.tex
tex/dissertacao/tabelas/: tab_matriz_confusao.tex
tex/livro/: main.tex
tex/projeto/: main.tex  referencias.bib
tex/projeto/tabelas/: tab_coeficientes_modelo.tex
tex/relatorio/: main.tex
tex/relatorio/tabelas/: tab_dicionario_dados.tex
tex/tcc/: main.tex
tex/tcc_artigo/: main.tex
tex/tcc_artigo/tabelas/: tab_comparacao_modelos.tex  tab_estatisticas_descritivas.tex
tex/tese/: main.tex
