# =============================================================================
# pyproject.toml — Repositório-Modelo TCC (Ciência de Dados)
# =============================================================================
# Gerenciado com uv (https://docs.astral.sh/uv/)
# =============================================================================

[project]
name = "projeto-tcc"
version = "2.0.0"
description = "Repositório-modelo multi-propósito para trabalhos acadêmicos — TCC (artigo/monografia), artigo, dissertação, tese — pipeline reprodutível com LaTeX e Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Seu Nome", email = "seu.email@academico.ufpb.br" },
]
keywords = ["tcc", "artigo", "dissertacao", "tese", "ciencia-de-dados", "machine-learning", "churn", "latex", "reprodutibilidade", "abntex2", "abnt"]

# ── Dependências ─────────────────────────────────────────────────────────────
dependencies = [
    # Manipulação de dados
    "pandas>=2.0",
    "numpy>=1.24",
    # Machine Learning
    "scikit-learn>=1.3",
    # Visualização
    "matplotlib>=3.7",
    "seaborn>=0.12",
    # Persistência de modelos
    "joblib>=1.3",
    # Notebooks
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

# ── Dependências opcionais ───────────────────────────────────────────────────
# Para usar LightGBM (gradient boosting mais rápido):
#   uv sync --group ml
#   pip install lightgbm>=4.0
# Se não instalado, o script usa GradientBoostingClassifier (sklearn) como fallback.
[project.optional-dependencies]
ml = [
    "lightgbm>=4.0",
]

# ── Grupos de desenvolvimento ────────────────────────────────────────────────
[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

# ── Ferramentas ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
